egonlang-core/res/examples/invalid/const_decl_with_no_identifier.eg
const;

// out: SyntaxError: unexpected ";"; expected: ["identifier"]